# dify-sso

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_ORIGIN.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  app.py  main.py
app/api/: router.py
app/api/dify/: enterprise.py  sso.py  webapp.py  workspace.py
app/configs/: __init__.py  app_config.py  database_config.py  logger_config.py  redis_config.py  sso_config.py
app/extensions/: ext_blueprints.py  ext_database.py  ext_logging.py  ext_oidc.py  ext_redis.py  ext_timezone.py
app/libs/: helper.py
app/models/: __init__.py  account.py  base.py  model.py
app/services/: account.py  oidc.py  passport.py  token.py
yaml/: docker-compose.yaml  k8s-deployment.yaml
