[project]
name = "dify-sso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "flask-cors==6.0.1",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.39",
]
